# DealSight-Intelligence-Autonomous-Multi-Agent-Orchestration

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/finetuning/: 01_qlora_quantization_explorer.ipynb  02_baseline_evaluation.ipynb  03_qlora_finetuning_pipeline.ipynb  04_finetuned_model_evaluation.ipynb  README.md
scripts/: 01_curate_lite.py  02_build_vectorstore.py  04_train_ensemble.py  05_run_app.py  06_train_dnn_wandb.py  07_evaluate_dnn_wandb.py
src/dealsight_intelligence/: __init__.py  config.py
src/dealsight_intelligence/agents/: __init__.py  agent.py  deals.py  deep_neural_network.py  ensemble_agent.py  frontier_agent.py  messaging_agent.py  neural_network_agent.py  planning_agent.py  scanner_agent.py  specialist_agent.py
src/dealsight_intelligence/app/: __init__.py  deal_agent_framework.py  gradio_app.py  log_utils.py
src/dealsight_intelligence/data/: __init__.py  curate_lite.py  datasets.py  items.py  loaders.py
src/dealsight_intelligence/evaluation/: __init__.py  testing.py
src/dealsight_intelligence/modal/: __init__.py  pricer_service.py
src/dealsight_intelligence/pricing/: __init__.py  train_deep_neural_network.py  train_ensemble.py  vectorstore.py
tests/: test_datasets.py  test_deals.py  test_framework.py  test_neural_network_agent.py  test_scanner.py
